--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,29 @@ p {
 
 .component {
     background-color: rgb(220, 220, 220);
+    width: 800px; 
+    height: 400px;
+    box-shadow: 0px 0px 30px grey;
+}
+
+.photo {
+    width: 100%; 
+    height: 100%;
+}
+
+.photo img {
+    width: 120px;
+    border-radius: 60px;
+}
+
+.blocks { 
+    width: 100%; 
+    height: 100%;
+}
+
+.about {
+    width: 100%; 
+    height: 100%;
 }
 
 .btn {
