--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,8 @@ p {
 
 .component {
     background-color: rgb(220, 220, 220);
-    width: 800px; 
-    height: 400px;
+    width: 700px; 
+    height: 350px;
     box-shadow: 0px 0px 25px grey;
 }
 
@@ -22,6 +22,7 @@ p {
 .photo img {
     width: 150px;
     border-radius: 75px;
+    border: 5px solid rgb(220, 220, 220);
 }
 
 .blocks { 
